# yesonevrouter

./: .clang-format  .gitignore  BUILD_VERIFICATION.md  CHANGELOG.md  CHECKLIST.md  CHECK_NAT_STATS.sh  CLAUDE.md  CMakeLists.txt  CONFIGURE_GUIDE.md  DIAGNOSE_NAT_LOSS.md  DNAT_FIX_COMPLETE.md  DPDK_ALTERNATIVE_SOLUTIONS.md  Dockerfile  ENABLE_IOMMU.md  INTERFACE_UP_FIX_ANALYSIS.md  NAT_FIX_PATCH_001.md  NAT_FIX_PATCH_002.md  NAT_FIX_SUMMARY.md  NAT_FIX_SUMMARY_PATCH_001.md  NAT_IMPROVEMENT_001_PATCH.md  NAT_IMPROVEMENT_001_PER_WORKER_TABLES.md  NAT_IMPROVEMENT_001_SUMMARY.md  NAT_TROUBLESHOOTING.md  TEST_NAT.md  build.sh  build_and_install.sh  codebuff.json  compile.sh  deploy.sh  diagnose_nat.sh  docker-compose.yml  install.sh  knowledge.md  main.c  meson.build  nat.h  nat_dpdk_fastpath.c  nat_worker.c  parse_startup_conf.sh  rebuild.sh  (+15 more)
.github/workflows/: ci.yml
config/: setup.gate  startup-config.txt  startup.conf  startup.json  yesrouter-config.json  yesrouter-config.xml  yesrouter-runner.sh  yesrouter.conf  yesrouter.env  yesrouter.service  yesrouter_clean.env
debian/: changelog  control  rules
docs/: ARCHITECTURE.md  ARP_NAT_FIX.md  CLI_ARCHITECTURE.md  DAEMON_ARCHITECTURE.md  FIX_NAT_ROUTING.md  IMPLEMENTATION_TASKS.md  INDEX.md  INDUSTRY_GRADE_FIXES.md  INSTALL_BUILD.md  LATENCY_FIX.md  MODULES_BREAKDOWN.md  NAT_DIAGNOSIS_ISSUE.md  NAT_IMPROVEMENTS_ROADMAP.md  NAT_TESTING_GUIDE.md  NAT_TUNE_PHASES.md  NAT_VPP_PARITY_ANALYSIS.md  PPPOE_RADIUS_TASKLIST.md  QUICK_REFERENCE.md  RADIUSLOCKLESS.md  README.md  task.md
dpdk-scripts/: 01-system-setup.sh  02-configure-hugepages.sh  03-install-dpdk.sh  04-bind-interfaces.sh  05-sample-app.sh  99-dpdk-sysctl.conf  README.md  install-all.sh
include/: acl.h  alg.h  arp.h  arp_protect.h  arp_queue.h  audit_log.h  auth.h  authz.h  bgp.h  cli.h  cli_session.h  cli_socket.h  config.h  conntrack.h  cpu_scheduler.h  dns.h  dpdk_flow.h  dpdk_init.h  dpdk_lpm.h  dpdk_numa.h  dpdk_timers.h  env_config.h  forwarding.h  fragmentation.h  ha.h  ha_accounting_sync.h  ha_active_active.h  hqos.h  interface.h  interface_types.h  ipoe.h  ipoe_coa.h  ipoe_dhcp.h  ipoe_profile.h  ipoe_radius.h  ipoe_security.h  ipoe_session.h  ipoe_timer.h  ippool.h  ipset.h  (+50 more)
include/ipv6/: ipv6.h
install/: yesrouter-install.sh
scripts/: build.sh
src/: CMakeLists.txt  nat_dpdk_fastpath.c  packet_rx.c
src/access/: CMakeLists.txt
src/auth/: CMakeLists.txt  audit_log.c  auth.c  authz.c  local_auth.c  password_hash.c  session.c  user_db.c
src/cli/: CMakeLists.txt  cli.c  cli.h  cli_arp.c  cli_auth.c  cli_config.c  cli_debug.c  cli_ha.c  cli_interface.c  cli_ippool.c  cli_nat.c  cli_pppoe.c  cli_radius.c  cli_route.c  cli_session.c  cli_socket.c  cli_system.c  cli_vlan.c  command.c  command.h  ssh_server.c  telnet_server.c  vty.c  vty.h  yesrouter_cli.c  yesrouterctl.c
src/config/: CMakeLists.txt  config.c  env_config.c  startup_json.c  vpp_parser.c  yesrouter.yang  yesrouter_config.c
src/core/: CMakeLists.txt  control_plane.c  control_plane.h  cpu_scheduler.c  daemon.c  daemon.h  lcore_ctx.c  lcore_ctx.h  main.c  missing_stubs.c  packet.c
src/dpdk/: CMakeLists.txt  dpdk_init.c
src/export/: CMakeLists.txt  export_common.h  exporter_core.c  exporter_core.h  flow_cache.c  flow_cache.h  ipfix_templates.h  nat_logger.c  nat_logger.h
src/forwarding/: CMakeLists.txt  dpdk_flow.c  dpdk_lpm.c  dpdk_numa.c  dpdk_timers.c  packet_rx.c  packet_tx.c  pcap_tap.c  session_table.c  tx_batch.c
src/ha/: CMakeLists.txt  ha.c  ha_accounting_sync.c  ha_active_active.c  worker_manager.c
src/interfaces/: CMakeLists.txt  interface.c  physical.c  physical.c.backup2  virtual.c
src/ipoe/: CMakeLists.txt  ipoe.c  ipoe_coa.c  ipoe_dhcp.c  ipoe_pool_allocator.c  ipoe_profile.c  ipoe_radius.c  ipoe_security.c  ipoe_session.c  ipoe_timer.c
src/ippool/: CMakeLists.txt  ippool.c
src/ipv6/: CMakeLists.txt  ipv6_core.c  ipv6_dhcpv6_relay.c  ipv6_dhcpv6pd.c  ipv6_fetcher.c  ipv6_mld.c  ipv6_ndp.c  ipv6_pool.c  ipv6_route.c
src/logging/: CMakeLists.txt  log.c
src/management/: CMakeLists.txt  metrics.c  rest_api.c  session_export.c  syslog_logger.c
src/monitoring/: CMakeLists.txt  stats.c
src/nat/: CMakeLists.txt  alg_ftp.c  alg_icmp.c  alg_icmp.c.bak  alg_sip.c  nat64.c  nat_alg.c  nat_core.c  nat_deterministic.c  nat_dpdk_fastpath.c  nat_fastpath.c  nat_fastpath.h  nat_ha.c  nat_hairpin.c  nat_ipfix.c  nat_log.c  nat_netflow.c  nat_portblock.c  nat_rss.c  nat_session.c  nat_translate.c  nat_worker.c
src/natexport/: CMakeLists.txt  examplecode.c  natexport.c  natexport.h
src/network/: CMakeLists.txt  acl.c  arp.c  arp_queue.c  dhcp_relay.c  dns.c  fragmentation.c  lacp.c  neighbor.c  proxy_arp.c  reassembly.c  vlan.c  vlan_db.c  vrrp.c
src/pppoe/: CMakeLists.txt  arp_protect.c  mschap.c  ppp_auth.c  ppp_debug.c  ppp_ipcp.c  ppp_lcp.c  pppoe.c  pppoe_security.c  pppoe_tx.c  service_profile.c
src/qos/: CMakeLists.txt  hqos.c  qos.c  qos_red.c
src/radius/: CMakeLists.txt  radius.c  radius_client.c  radius_lockless.c
src/routing/: CMakeLists.txt  bgp.c  ospf.c  pbr.c  routing_dpdk_fib.c  routing_table.c  vrf.c
src/security/: conntrack.c  ipset.c
tests/: CMakeLists.txt  PHASE1_TEST_PLAN.md  RUN_TESTS.md  ipv6_pool_test.c  ipv6_route_test.c  pppoe_unit_tests.c  radius_integration_test.c  radius_unit_tests.c  run_phase1_tests.sh  test_arp_queue.c  test_nat_session.c  test_nat_worker.c  test_phase1_build.c  test_phase1_config.c  test_phase1_dpdk.c  test_phase1_interfaces.c  test_phase1_logging.c  test_phase1_packet.c  test_phase2_arp.c  test_vlan_lacp.c
tests/cli/: test_cli  test_cli.c
tests/perf/: apply_tuning.sh  collect_metrics.sh  profile_commands.sh  run_scale_test.sh
tests/trex/: 64byte_linerate.py  imix_rfc2544.py  latency_test.py  nat_scale_test.py  pppoe_subscriber.py
tools/: CMakeLists.txt  nat_load_test.c  setup_dpdk.sh  simulate_nat  simulate_nat.c
